--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vumigo",
-  "version": "0.0.1",
+  "name": "vumigo_v01",
+  "version": "0.1",
   "description": "Javascript toolkit and examples for Vumi's Javascript sandbox",
   "main": "lib/index.js",
   "scripts": {
