--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "url": "git://github.com/praekelt/vumi-jssandbox-toolkit"
   },
   "dependencies": {
-    "jed": "0.5.x"
+    "jed": "0.5.x",
+    "q": "0.9.x"
   },
   "devDependencies": {
     "mocha": "1.7.x",
