--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "url": "git://github.com/praekelt/vumi-jssandbox-toolkit"
   },
   "dependencies": {
-    "jed": "0.5.x",
-    "q": "0.9.x"
+    "jed": "~0.5",
+    "q": "~0.9"
   },
   "devDependencies": {
-    "mocha": "1.7.x",
-    "sinon": "1.6.x"
+    "mocha": "~1.8",
+    "mocha-as-promised": "~2.0.0"
   },
   "keywords": [
     "vumi",
