--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "devDependencies": {
     "mocha": "~1.8",
-    "mocha-as-promised": "~2.0.0"
+    "mocha-as-promised": "~2.0.0",
+    "jshint": "~2.4.3"
   },
   "keywords": [
     "vumi",
