Replace underscore with lodash in package.json

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "jed": "~0.5",
     "q": "~0.9",
-    "underscore": "~1.5.2"
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "mocha": "~1.8",
