--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "q": "~0.9"
   },
   "devDependencies": {
-    "mocha": "~1.18",
+    "mocha": "3.0.2",
     "jshint": "~2.4.3"
   },
   "keywords": [
