--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [4.x]
+        node-version: [10.x, 12.x, 16.x]
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
