--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "q": "~1.5.1"
   },
   "devDependencies": {
-    "mocha": "5.0.1",
-    "jshint": "~2.9.5"
+    "mocha": "~9.2",
+    "jshint": "~2.13"
   },
   "keywords": [
     "vumi",
